Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -211,7 +211,7 @@ body.with-header {
 }
 
 .social-logos {
-	padding-top: 30px;
+	padding-top: 40px;
 	display: flex;
 	justify-content: center;
 	gap: 10px;
